Finalized scss and nunjucks components restructure

--- a/src/nunjucks/templates/sections/footer.html
+++ b/src/nunjucks/templates/sections/footer.html
@@ -11,7 +11,7 @@
           <a href="{{ item.href }}" title="{{ item.title }}">{{ item.title }}</a>
           {% endfor %}
         </nav>
-        {% include "partials/social-links.html" %}
+        {% include "elements/social-links.html" %}
         <p class="copyright">&copy;Copyright 2020 Dear America, LLC &nbsp;|&nbsp; <a target="_blank" href="https://mydonut.co/privacy-policy">Privacy</a></p>
       </div>
     </div>
