--- a/src/scss/partials/globals/_reset.scss
+++ b/src/scss/partials/globals/_reset.scss
@@ -1,6 +1,6 @@
 * {
   box-sizing: border-box;
-} // custom rule
+}
 
 html,
 body,
@@ -90,6 +90,7 @@ video {
   font: inherit;
   vertical-align: baseline;
 }
+
 /* HTML5 display-role reset for older browsers */
 article,
 aside,
@@ -104,17 +105,27 @@ nav,
 section {
   display: block;
 }
+
+html {
+  -webkit-text-size-adjust: 100%; // Prevent font scaling in landscape while allowing user zoom
+}
+
 body {
   line-height: 1;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
+
 ol,
 ul {
   list-style: none;
 }
+
 blockquote,
 q {
   quotes: none;
 }
+
 blockquote:before,
 blockquote:after,
 q:before,
@@ -122,15 +133,10 @@ q:after {
   content: '';
   content: none;
 }
+
 table {
   border-collapse: collapse;
   border-spacing: 0;
-}
-
-///////// Everything above ^^ is from original reset.css /////////
-
-html {
-  -webkit-text-size-adjust: 100%; // Prevent font scaling in landscape while allowing user zoom
 }
 
 input:invalid {
